Changed database connection section

--- a/every_politician/everypolitician.ipynb
+++ b/every_politician/everypolitician.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4  [{'name': 'People's National Assembly', 'slug'...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,31 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "434a9855b8dd4a98bfa0de028e8afb93",
+       "model_id": "b6fb56bd5ebe4bf69c71e05b51d8be5d",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
       "text/plain": [
        "HBox(children=(FloatProgress(value=0.0, max=672.0), HTML(value='')))"
       ]
@@ -248,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,20 +242,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pol_df.to_csv(\"politician_data.csv\", index=False)Abkhazia"
+    "pol_df.to_csv(\"politician_data.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (11) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pol_df = pd.read_csv(\"politician_data.csv\", encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pol_df = pd.read_csv(\"politician_data.csv\", encoding='utf-8')"
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "connect = \"postgresql+psycopg2://%s:%s@%s:5432/%s\" % (\n",
+    "    os.getenv(\"user\"),\n",
+    "    os.getenv(\"password\"),\n",
+    "    os.getenv(\"host\"),\n",
+    "    os.getenv(\"database\")\n",
+    ")\n"
    ]
   },
   {
@@ -279,52 +291,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Connection(object):\n",
-    "    def __init__(self):\n",
-    "        '''\n",
-    "        Load the environment variables by calling the load_dotenv method.\n",
-    "        The database connection details are set as environment variables.\n",
-    "        '''\n",
-    "        load_dotenv()\n",
-    "    \n",
-    "    def connect_to_database(self, use_postgres=True, return_as_string=False):\n",
-    "        '''\n",
-    "        Connect to the mysql database and create the engine object\n",
-    "        using sqlalchemy.\n",
-    "        '''\n",
-    "        if use_postgres:\n",
-    "            conn_string = f'postgres://{os.getenv(\"user\")}:{os.getenv(\"password\")}@{os.getenv(\"host\")}:{os.getenv(\"port\")}/{os.getenv(\"database\")}?charset=utf8'\n",
-    "        else:\n",
-    "            conn_string = f'mysql://{os.getenv(\"user\")}:{os.getenv(\"password\")}@{os.getenv(\"host\")}:{os.getenv(\"port\")}/{os.getenv(\"database\")}?charset=utf8'\n",
-    "        if return_as_string:\n",
-    "            return conn_string\n",
-    "        engine = sa.create_engine(conn_string)\n",
-    "        return engine\n",
-    "\n"
+    "def to_alchemy(df):\n",
+    "\n",
+    "    engine = create_engine(connect)\n",
+    "    df.to_sql(\n",
+    "        'usa_politician', \n",
+    "        con=engine, \n",
+    "        index=False, \n",
+    "        if_exists='replace'\n",
+    "    )\n",
+    "    print(\"to_sql() done (sqlalchemy)\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to_sql() done (sqlalchemy)\n"
+     ]
+    }
+   ],
    "source": [
-    "conn = Connection()\n",
-    "engine = conn.connect_to_database(use_postgres=False, return_as_string=True)"
+    "to_alchemy(usa)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "usa.to_sql(\"every_politician\", engine, index=False, if_exists = 'append')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,10 +331,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "connect = \"postgresql+psycopg2://%s:%s@%s:5432/%s\" % (\n",
+    "    os.getenv(\"user\"),\n",
+    "    os.getenv(\"password\"),\n",
+    "    os.getenv(\"host\"),\n",
+    "    os.getenv(\"database\")\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_alchemy(df):\n",
+    "\n",
+    "    engine = create_engine(connect)\n",
+    "    df.to_sql(\n",
+    "        'every_politician', \n",
+    "        con=engine, \n",
+    "        index=False, \n",
+    "        if_exists='replace'\n",
+    "    )\n",
+    "    print(\"to_sql() done (sqlalchemy)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to_sql() done (sqlalchemy)\n"
+     ]
+    }
+   ],
+   "source": [
+    "to_alchemy(pol_df)"
+   ]
   }
  ],
  "metadata": {
@@ -355,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
